[gd_scene load_steps=10 format=3 uid="uid://rfnlsbnemd3x"]

[ext_resource type="Texture2D" uid="uid://bnop7i2g42grt" path="res://Sprites/ui/play_again_button/play_again1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://3h2l5ikfac88" path="res://Sprites/ui/back_to_menu_button/back_to_menu2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c4ujadffyamk3" path="res://Sprites/new color palette/Background/EndBackground.png" id="2_o0wwh"]
[ext_resource type="Texture2D" uid="uid://cdi1w1f5pbsr1" path="res://Sprites/ui/back_to_menu_button/back_to_menu1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://433tre3advfn" path="res://Sprites/ui/play_again_button/play_again2.png" id="4"]
[ext_resource type="Script" path="res://Scripts/End.gd" id="6"]
[ext_resource type="FontFile" uid="uid://bukql8xvwdedr" path="res://Fonts/Kingthings Trypewriter 2.ttf" id="7_jptud"]
[ext_resource type="FontFile" uid="uid://dc5o30b1fag" path="res://Fonts/Chalkduster.ttf" id="8_xje6b"]
[ext_resource type="AudioStream" uid="uid://gwiij4y1s684" path="res://Sounds/old-radio-button-click-97549.mp3" id="9_rid4c"]

[node name="End" type="Node2D"]
texture_filter = 1
scale = Vector2(6, 6)
script = ExtResource("6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 321.0
offset_bottom = 180.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="road" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(0, 8.88178e-16)
scale = Vector2(0.166667, 0.166512)
texture = ExtResource("2_o0wwh")
centered = false

[node name="PlayAgain" type="TextureButton" parent="."]
visible = false
texture_filter = 1
offset_left = 48.0
offset_top = 128.0
offset_right = 144.0
offset_bottom = 168.0
texture_normal = ExtResource("1")
texture_pressed = ExtResource("1")
texture_hover = ExtResource("4")

[node name="BackToMenu" type="TextureButton" parent="."]
visible = false
texture_filter = 1
offset_left = 176.0
offset_top = 128.0
offset_right = 272.0
offset_bottom = 168.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("3")
texture_hover = ExtResource("2")

[node name="GameSummaryLabel" type="Label" parent="."]
offset_left = 62.8333
offset_top = 10.8333
offset_right = 128.833
offset_bottom = 31.8333
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("7_jptud")
text = "Summary"
vertical_alignment = 1

[node name="GradeLabel" type="Label" parent="."]
offset_left = 77.5
offset_top = 137.833
offset_right = 141.5
offset_bottom = 158.833
scale = Vector2(0.56, 0.56)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "grade:"
vertical_alignment = 1

[node name="GradeNumber" type="Label" parent="."]
offset_left = 65.1667
offset_top = 151.333
offset_right = 129.167
offset_bottom = 172.0
scale = Vector2(0.9, 0.9)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 40.6667
offset_top = 119.0
offset_right = 154.667
offset_bottom = 140.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "final score: "
vertical_alignment = 1

[node name="ScoreNumber" type="Label" parent="."]
offset_left = 118.167
offset_top = 118.667
offset_right = 182.167
offset_bottom = 139.334
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ComboLabel" type="Label" parent="."]
offset_left = 42.1667
offset_top = 38.8333
offset_right = 151.167
offset_bottom = 59.8333
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "max combo:"
vertical_alignment = 1

[node name="ComboNumber" type="Label" parent="."]
offset_left = 118.167
offset_top = 38.8333
offset_right = 182.167
offset_bottom = 59.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GreatLabel" type="Label" parent="."]
offset_left = 42.1667
offset_top = 54.8333
offset_right = 106.167
offset_bottom = 75.8333
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "great:"
vertical_alignment = 1

[node name="GreatNumber" type="Label" parent="."]
offset_left = 118.167
offset_top = 54.8333
offset_right = 182.167
offset_bottom = 75.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoodLabel" type="Label" parent="."]
offset_left = 42.1667
offset_top = 70.8333
offset_right = 106.167
offset_bottom = 91.8333
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "good:"
vertical_alignment = 1

[node name="GoodNumber" type="Label" parent="."]
offset_left = 118.167
offset_top = 70.8333
offset_right = 182.167
offset_bottom = 91.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="OkayLabel" type="Label" parent="."]
offset_left = 42.1667
offset_top = 86.8333
offset_right = 106.167
offset_bottom = 107.833
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "okay:"
vertical_alignment = 1

[node name="OkayNumber" type="Label" parent="."]
offset_left = 118.167
offset_top = 86.8333
offset_right = 182.167
offset_bottom = 107.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="MissedLabel" type="Label" parent="."]
offset_left = 42.1667
offset_top = 102.833
offset_right = 110.167
offset_bottom = 123.833
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "missed:"
vertical_alignment = 1

[node name="MissedNumber" type="Label" parent="."]
offset_left = 118.167
offset_top = 102.833
offset_right = 182.167
offset_bottom = 123.5
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.964706, 0.839216, 0.741176, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ContinueButton" type="LinkButton" parent="."]
offset_left = 204.0
offset_top = 69.0
offset_right = 303.0
offset_bottom = 97.0
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "> Continue"

[node name="MainMenuButton" type="LinkButton" parent="."]
offset_left = 204.0
offset_top = 86.5
offset_right = 317.0
offset_bottom = 114.5
scale = Vector2(0.7, 0.7)
theme_override_colors/font_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("8_xje6b")
text = "> Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_rid4c")

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
